        "reservations" table
-       Ran new migration in development, test, preview, and
        production environments
-       All environments are seeded with data
- rate:
        Added rate limiter function to app.js to resolve GitHub error/alert
- US-#7: (for User Story #7)
        Modified reservations.controller "list" function to check for a
        mobile_number query and if so, to use the given (from ReadMe) 
        "search" function in reservations.service to search for reservations 
        with a given phone number.
- US-#8: (for User Story #8)
- F-US-#2: (fron end for User Story #2)
- issues-#x: created to correct issues with User Stories 4, 5 and 6 that
        emerged after the back end files were completed. Also renamed 
        the "update" and "edit" functions in the reservations table
        to "updateStatus" and "update" for clarity.
- F-US-#1 (F for front end, User Story #1)
-       Wrote component NewReservation to create and save a new reservation. Also wrote a ReservationForm component that can be re-used that has the form with input fields. This can be used for create reservation, update reservation, and change status.
-        Created previous, today and next buttons on dashboard. They work locally but I'm unable to run tests.
- F-US-#2: (front end for User Story #2)
- F-Revising-1, 12/12/23: Still unable to run front-end tests. Test 1 on backend is now failing & needs to be fixed. 
Updated 1/2/24: all back-end unit tests passing.
Started working on user story 4, Seat Reservation. New tables function works but need to display tables on dashboard and add free/occupied status to each table. Also need seat button next to each reservation (add to ReservationView).
To run the front-end tests, try starting up the server on its own, letting it get warmed up, then running the front-end tests separately using the commands in /front-end/package.json file.
- F-US-#4: corrected table alignment for Reservations in Dashboard