@@ -1,5 +1,5 @@
 import React from "react";
-import { Link, useHistory, useParams } from "react-router-dom";
+import { useHistory } from "react-router-dom";
 
 export default function ReservationView({ reservation, index }) {
   const history = useHistory();
