@@ -85,3 +85,8 @@ Updated 1/2/24: all back-end unit tests passing.
 Started working on user story 4, Seat Reservation. New tables function works but need to display tables on dashboard and add free/occupied status to each table. Also need seat button next to each reservation (add to ReservationView).
 To run the front-end tests, try starting up the server on its own, letting it get warmed up, then running the front-end tests separately using the commands in /front-end/package.json file.
 - F-US-#4: corrected table alignment for Reservations in Dashboard
+- F-Seat: Seat Reservation buttons and functionality
+        - Created /reservations/:reservationId/seat page
+        - Created api function updateTable() to PUT
+          reservation_id to a table to seat a booked reservation
+        - Submit, Cancel buttons working as expected
